JEKT-1735 Configuration created (new spark variable added - SUI_IND) 🔁 Modified     - Pipeline        - JDE_01_MD_BTCH     - Dataset        - DS_JDE_01_F4108

--- a/src/datasets/DS_JDE_01_F4108/pbt_aspects.yml
+++ b/src/datasets/DS_JDE_01_F4108/pbt_aspects.yml
@@ -436,6 +436,48 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: IOCFRGUID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOCFRMKEY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOCFRPID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOCFRUSER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOISDELETE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IOCFRSEQN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
