--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1972,14 +1972,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_MFG_ORDER_ITM:
-    name: MD_MFG_ORDER_ITM
+    name: SAP_MD_MFG_ORDER_ITM
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-09 23:11:42'
-    modifiedAt: '2023-05-10 03:09:40'
+    modifiedAt: '2023-05-10 22:24:33'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AFPO
@@ -2984,7 +2984,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-10 03:08:25'
+    modifiedAt: '2023-05-10 22:24:33'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
