--- a/src/datasets/MD_MFG_ORDER_ITM/pbt_aspects.yml
+++ b/src/datasets/MD_MFG_ORDER_ITM/pbt_aspects.yml
@@ -254,6 +254,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: PLAN_ORDR_DELV_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: COST_EST_NUM
     type: string
     nullable: true
