JEKT-1210 - update mandt for hm2 and job creation for hm2 ❇️ New     - Job        - JOB_MD_MATL_MVMT_HDR_HM2
🔁 Modified
    - Pipeline
       - SAP_MD_MATL_MVMT_HDR_HMD_HM2
       - JDE_MD_MATL_MVMT_HDR_BW2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1813,7 +1813,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 09:44:10'
-    modifiedAt: '2023-04-28 09:45:00'
+    modifiedAt: '2023-05-10 09:33:01'
     datasets:
       inputs:
       - datasets/DS_JDE_F0005
@@ -1830,7 +1830,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-27 08:19:44'
-    modifiedAt: '2023-05-10 09:01:12'
+    modifiedAt: '2023-05-11 09:30:38'
     datasets:
       inputs:
       - datasets/DS_SAP_MATDOC
@@ -8081,6 +8081,31 @@ jobs:
     enabled: null
     createdAt: '2023-04-13 10:18:29'
     modifiedAt: '2023-05-10 09:04:36'
+    author: ggrilo1@its.jnj.com
+  jobs/JOB_MD_MATL_MVMT_HDR_HM2:
+    name: JOB_MD_MATL_MVMT_HDR_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MATL_MVMT_HDR_HMD
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-11 09:31:42'
+    modifiedAt: '2023-05-11 09:32:17'
     author: ggrilo1@its.jnj.com
 functions:
   author: null
