--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7858,6 +7858,31 @@ jobs:
     createdAt: '2023-04-14 12:08:25'
     modifiedAt: '2023-04-14 12:09:00'
     author: mbolado1@its.jnj.com
+  jobs/JOB_MD_MATL_LOC_HM2:
+    name: JOB_MD_MATL_LOC_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_MATL_LOC
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-11 12:37:15'
+    modifiedAt: '2023-05-11 12:38:07'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
