🔁 JEKT-1744     - Pipeline        - SAP_MD_MFG_ORDER_ITM     - Dataset        - DS_SAP_01_AUFK        - DS_SAP_01_AFPO

--- a/src/datasets/DS_SAP_01_AFPO/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_AFPO/pbt_aspects.yml
@@ -639,6 +639,76 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: SGT_SCAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KUNNR2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_SEASON_YEAR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_SEASON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_COLLECTION
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_THEME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_SALLOC_QTY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MILL_OC_AUFNR_U
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MILL_OC_RUMNG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MILL_OC_SORT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
