--- a/src/datasets/DS_SAP_01_AUFK/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_AUFK/pbt_aspects.yml
@@ -2,13 +2,6 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: AUFNR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _deleted_
     type: string
     nullable: true
@@ -17,6 +10,13 @@ schema:
       mappings: []
       tags: []
   - name: MANDT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AUFNR
     type: string
     nullable: true
     metadata:
@@ -660,6 +660,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: VERAA_USER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: VNAME
     type: string
     nullable: true
@@ -723,7 +730,56 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZCO_HYPCODE
+  - name: FERC_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _CUM_INDCU
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _CUM_CMNUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _CUM_AUEST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _CUM_DESNUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CLAIM_CONTROL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UPDATE_NEEDED
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UPDATE_CONTROL
     type: string
     nullable: true
     metadata:
