JEKT-1735 Config added for SAP (FSN, SVS & ATL) 🔁 Modified     - Pipeline        - SAP_01_MD_BTCH        - JDE_01_MD_BTCH

--- a/src/pipelines/SAP_01_MD_BTCH/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_MD_BTCH/pbt_aspects.yml
@@ -1,6 +1,8 @@
 version: 1
 configurations:
 - GEU
+- FSN
+- ATL
 - MBP
 - BBA
 - BBL
@@ -11,6 +13,7 @@ configurations:
 - HCS
 - HM2
 - BBN
+- SVS
 - TAI
 - BWI
 dependencies: []
