JEKT-215 HM2 added to Main Job 🔁 Modified     - Pipeline        - SAP_01_MD_MATL_LOC_HM2     - Job        - JOB_MD_MATL_LOC

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1721,14 +1721,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_MATL_LOC:
-    name: SAP_01_MD_MATL_LOC
+    name: SAP_01_MD_MATL_LOC_HM2
     description: ''
     author: mbolado1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-06 15:55:44'
-    modifiedAt: '2023-05-05 17:34:39'
+    modifiedAt: '2023-05-11 15:08:59'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARC
@@ -7520,43 +7520,6 @@ jobs:
     createdAt: '2023-04-06 21:07:36'
     modifiedAt: '2023-04-27 20:51:25'
     author: smille29@its.jnj.com
-  jobs/JOB_MD_MATL_LOC:
-    name: JOB_MD_MATL_LOC
-    description: ''
-    fabricUID: 32
-    scheduler:
-      Databricks: {}
-    cloudProvider: null
-    jobSize: Prophecy_Large
-    scheduleCron: 0 0 0 1/1 * ? *
-    timeout: null
-    alerting:
-      emails: ''
-      onStart: false
-      onSuccess: false
-      onFailure: false
-    pipelines:
-    - pipelines/JDE_MD_MATL_BW2
-    - pipelines/JDE_MD_MATL_LOC_DEU
-    - pipelines/JDE_MD_MATL_LOC_GMD
-    - pipelines/JDE_MD_MATL_LOC_MTR
-    - pipelines/JDE_MD_MATL_LOC_SJD
-    - pipelines/JDE_MD_MATL_LOC_JEM
-    - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
-    - pipelines/JDE_MD_MATL_LOC_JSW
-    - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
-    - pipelines/JDE_MD_MATL_LOC_JES
-    - pipelines/JDE_MD_MATL_LOC_DJD
-    - pipelines/JDE_MD_MATL_LOC_JET
-    - pipelines/SAP_MD_MATL_LOC_HMD
-    jobClusterMode:
-      clusterMode:
-        Single: {}
-      clusterId: null
-    enabled: false
-    createdAt: '2023-04-03 10:09:49'
-    modifiedAt: '2023-04-28 15:02:23'
-    author: ggrilo1@its.jnj.com
   jobs/JOB_MD_BILL_DOC_HDR_HM2:
     name: JOB_MD_BILL_DOC_HDR_HM2
     description: ''
@@ -7883,6 +7846,43 @@ jobs:
     createdAt: '2023-05-11 12:37:15'
     modifiedAt: '2023-05-11 12:38:07'
     author: mbolado1@its.jnj.com
+  jobs/JOB_MD_MATL_LOC:
+    name: JOB_MD_MATL_LOC
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Large
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JDE_MD_MATL_BW2
+    - pipelines/JDE_MD_MATL_LOC_DEU
+    - pipelines/JDE_MD_MATL_LOC_GMD
+    - pipelines/SAP_01_MD_MATL_LOC
+    - pipelines/JDE_MD_MATL_LOC_MTR
+    - pipelines/JDE_MD_MATL_LOC_SJD
+    - pipelines/JDE_MD_MATL_LOC_JEM
+    - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/JDE_MD_MATL_LOC_JSW
+    - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
+    - pipelines/JDE_MD_MATL_LOC_JES
+    - pipelines/JDE_MD_MATL_LOC_DJD
+    - pipelines/JDE_MD_MATL_LOC_JET
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: false
+    createdAt: '2023-04-03 10:09:49'
+    modifiedAt: '2023-05-11 15:11:52'
+    author: ggrilo1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
