🔁 JEKT-1744     - Pipeline        - SAP_MD_MFG_ORDER_ITM_MBP_BWI_BBN_BBL_BBA_MRS_P01_TAI

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1972,14 +1972,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_MFG_ORDER_ITM:
-    name: SAP_MD_MFG_ORDER_ITM
+    name: SAP_MD_MFG_ORDER_ITM_MBP_BWI_BBN_BBL_BBA_MRS_P01_TAI
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-09 23:11:42'
-    modifiedAt: '2023-05-11 20:13:19'
+    modifiedAt: '2023-05-11 21:09:13'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AFPO
