❇️ JEKT-1744     - Pipeline        - JDE_MD_MFG_ORDER_ITM     - Dataset        - DS_JDE_01_F4801
🔁 Modified
    - Dataset
       - MD_MFG_ORDER_ITM

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1988,6 +1988,22 @@ pipelines:
       - datasets/MD_MFG_ORDER_ITM
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_MFG_ORDER_ITM:
+    name: JDE_MD_MFG_ORDER_ITM
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-11 21:14:36'
+    modifiedAt: '2023-05-11 21:37:39'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F4801
+      outputs:
+      - datasets/MD_MFG_ORDER_ITM
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2984,7 +3000,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-11 12:46:54'
+    modifiedAt: '2023-05-11 21:36:15'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6774,6 +6790,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-05-09 23:20:01'
         modifiedAt: '2023-05-09 23:20:01'
+  datasets/DS_JDE_01_F4801:
+    name: DS_JDE_01_F4801
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-05-11 21:21:47'
+    modifiedAt: '2023-05-11 21:21:47'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-05-11 21:21:47'
+        modifiedAt: '2023-05-11 21:21:47'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
