🔁 JEKT-1744     - Pipeline        - JDE_MD_MFG_ORDER_ITM

--- a/src/pipelines/JDE_MD_MFG_ORDER_ITM/pbt_aspects.yml
+++ b/src/pipelines/JDE_MD_MFG_ORDER_ITM/pbt_aspects.yml
@@ -1,6 +1,13 @@
 version: 1
 configurations:
-- default
-- BW2
+- DJD
+- MTR
+- JET
 - JES
+- BW2
+- SJD
+- default
+- JSW
+- JEM
+- DEU
 dependencies: []
