🔁 JEKT-1744     - Pipeline        - JDE_MD_MFG_ORDER_ITM_BW2_DEU_DJD_JET_JEM_JES_JSW_SJD_MTR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1989,14 +1989,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_MD_MFG_ORDER_ITM:
-    name: JDE_MD_MFG_ORDER_ITM
+    name: JDE_MD_MFG_ORDER_ITM_BW2_DEU_DJD_JET_JEM_JES_JSW_SJD_MTR
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-11 21:14:36'
-    modifiedAt: '2023-05-11 22:06:53'
+    modifiedAt: '2023-05-11 22:14:29'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4801
