❇️ JEKT-1744     - Pipeline        - SAP_MD_MFG_ORDER_ITM_HM2_HMD
🔁 Modified
    - Dataset
       - MD_MFG_ORDER_ITM
       - DS_SAP_01_AUFK
       - DS_SAP_01_AFPO

--- a/src/datasets/DS_SAP_01_AUFK/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_AUFK/pbt_aspects.yml
@@ -2,13 +2,6 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: _deleted_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MANDT
     type: string
     nullable: true
@@ -667,6 +660,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: EEW_AUFK_PS_DUMMY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: VNAME
     type: string
     nullable: true
@@ -716,21 +716,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VAPLZ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: WAWRK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FERC_IND
+  - name: CPD_UPDAT
     type: string
     nullable: true
     metadata:
@@ -765,6 +751,34 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: AD01PROFNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VAPLZ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WAWRK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FERC_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CLAIM_CONTROL
     type: string
     nullable: true
@@ -780,6 +794,34 @@ schema:
       mappings: []
       tags: []
   - name: UPDATE_CONTROL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EB_POST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_SEQUENCE_NUMBER_ORD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_ACTIVATE_PUSH_ORD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_NS_MATERIAL_ORD
     type: string
     nullable: true
     metadata:
@@ -821,7 +863,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
