--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2004,6 +2004,23 @@ pipelines:
       - datasets/MD_MFG_ORDER_ITM
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MFG_ORDER_ITM_HM2_HMD:
+    name: SAP_MD_MFG_ORDER_ITM_HM2_HMD
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-11 23:30:57'
+    modifiedAt: '2023-05-11 23:51:44'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_AFPO
+      - datasets/DS_SAP_01_AUFK
+      outputs:
+      - datasets/MD_MFG_ORDER_ITM
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -3000,7 +3017,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-11 21:36:15'
+    modifiedAt: '2023-05-11 23:31:12'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6765,7 +6782,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-05-09 23:18:47'
-    modifiedAt: '2023-05-11 15:27:31'
+    modifiedAt: '2023-05-11 23:40:43'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6780,7 +6797,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-05-09 23:20:01'
-    modifiedAt: '2023-05-11 15:27:08'
+    modifiedAt: '2023-05-11 23:40:30'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
