--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8347,6 +8347,32 @@ jobs:
     createdAt: '2023-03-28 16:13:19'
     modifiedAt: '2023-05-08 18:29:38'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_MFG_ORDER_ITM:
+    name: JOB_MD_MFG_ORDER_ITM
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/JDE_MD_MFG_ORDER_ITM
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-12 01:38:37'
+    modifiedAt: '2023-05-12 01:47:51'
+    author: hgermi1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
