🔁 JEKT-1744     - Pipeline        - SAP_MD_MFG_ORDER_ITM_HM2_HMD     - Job        - JOB_MD_MFG_ORDER_ITM

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2012,7 +2012,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-11 23:30:57'
-    modifiedAt: '2023-05-12 12:44:41'
+    modifiedAt: '2023-05-12 12:50:05'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AFPO
@@ -8365,13 +8365,14 @@ jobs:
     pipelines:
     - pipelines/MD_MFG_ORDER_ITM
     - pipelines/JDE_MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_MFG_ORDER_ITM_HM2_HMD
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-05-12 01:38:37'
-    modifiedAt: '2023-05-12 01:47:51'
+    modifiedAt: '2023-05-12 12:52:38'
     author: hgermi1@its.jnj.com
 functions:
   author: null
