JEKT-1735 Update pipeline & package names 🔁 Modified     - Pipeline        - SAP_01_MD_BTCH_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN_ATL_HM2_HMD        - JDE_01_MD_BTCH_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1972,14 +1972,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_BTCH:
-    name: SAP_01_MD_BTCH
+    name: SAP_01_MD_BTCH_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN_ATL_HM2_HMD
     description: ''
     author: mbolado1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-08 17:49:25'
-    modifiedAt: '2023-05-12 12:42:08'
+    modifiedAt: '2023-05-12 13:44:49'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MCH1
@@ -1989,14 +1989,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_01_MD_BTCH:
-    name: JDE_01_MD_BTCH
+    name: JDE_01_MD_BTCH_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     description: ''
     author: mbolado1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-10 14:58:43'
-    modifiedAt: '2023-05-11 13:03:34'
+    modifiedAt: '2023-05-12 13:46:31'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4108
