--- a/src/datasets/DS_SAP_03_MSKU/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_03_MSKU/pbt_aspects.yml
@@ -184,6 +184,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: KUUML
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SGT_SCAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
