--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8319,6 +8319,32 @@ jobs:
     createdAt: '2023-05-05 19:57:17'
     modifiedAt: '2023-05-05 19:58:18'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_BTCH:
+    name: JOB_MD_BTCH
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JDE_01_MD_BTCH
+    - pipelines/SAP_01_MD_BTCH
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-12 15:27:23'
+    modifiedAt: '2023-05-12 15:39:01'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
