JEKT-1753 ❇️ New     - Pipeline        - SAP_MD_CO_CD_HMD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1971,6 +1971,20 @@ pipelines:
       - datasets/MD_BILL_DOC_HDR
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_CO_CD_HMD:
+    name: SAP_MD_CO_CD_HMD
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-12 17:10:50'
+    modifiedAt: '2023-05-12 17:17:28'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
