JEKT-1753 ❇️ New     - Dataset        - DS_SAP_HMD_KNB1
🔁 Modified
    - Pipeline
       - SAP_MD_CO_CD_HMD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1979,9 +1979,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-12 17:10:50'
-    modifiedAt: '2023-05-12 17:17:28'
+    modifiedAt: '2023-05-12 17:34:12'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_SAP_HMD_KNB1
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -6741,6 +6742,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-05 18:43:35'
         modifiedAt: '2023-04-05 18:43:35'
+  datasets/DS_SAP_HMD_KNB1:
+    name: DS_SAP_HMD_KNB1
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-05-12 17:30:46'
+    modifiedAt: '2023-05-12 17:30:46'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-05-12 17:30:46'
+        modifiedAt: '2023-05-12 17:30:46'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
