❇️ JEKT-1914     - Pipeline        - SAP_MD_CUST_MSTR_UNLD_DATA     - Dataset        - DS_SAP_01_KNVA
🔁 Modified
    - Dataset
       - MD_CUST_MSTR_UNLD_DATA

--- a/src/datasets/MD_CUST_MSTR_UNLD_DATA/pbt_aspects.yml
+++ b/src/datasets/MD_CUST_MSTR_UNLD_DATA/pbt_aspects.yml
@@ -1,1 +1,102 @@
 version: 1
+schema:
+  type: struct
+  fields:
+  - name: SRC_SYS_CD
+    type: integer
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CUST_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UNLOADING_PT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SEQ_NUM_FOR_UNLOADING_PT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CUST_FCTRY_CAL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GOODS_RECV_HRS_ID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NOT_IN_USE_VAL_1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NOT_IN_USE_VAL_2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NOT_IN_USE_VAL_3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NOT_IN_USE_VAL_4
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RCPT_TIMES_MON_MORNING_FROM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RECV_HRS_MON_MORNING_UNTL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RECV_HRS_MON_PM_FROM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RECV_HRS_MON_PM_UNTL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
