JEKT-1726 Removed custom target gem (used for testing) as this was intermittently throwing the none type has no attribute spark session error 🔁 Modified     - Pipeline        - MD_MATL_VALUT_JDE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1996,14 +1996,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-09 12:49:52'
-    modifiedAt: '2023-05-14 16:42:12'
+    modifiedAt: '2023-05-15 08:06:57'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101_NC
       - datasets/DS_JDE_01_F41021_NC
       - datasets/DS_JDE_01_F4105
-      outputs:
-      - datasets/TEST_INV_OUT
+      outputs: []
     subgraphs: []
     dependencies: {}
 datasets:
