JEKT-1726 Added target and select fields gems 🔁 Modified     - Pipeline        - MD_MATL_VALUT_JDE     - Dataset        - MD_MATL_VALUT

--- a/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
@@ -23,6 +23,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: PRC_CNTL_IND
+    type: string
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: VALUT_TYPE_CD
     type: string
     nullable: true
@@ -30,42 +37,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PRC_CNTL_IND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: TOT_STK_QTY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOT_VAL_AMT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MVG_AVG_PRC_AMT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PRC_AMT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PRC_UNIT_NBR
     type: decimal(18,4)
     nullable: true
     metadata:
@@ -86,92 +58,15 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DEL_FL
-    type: string
+  - name: PRC_AMT
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_USG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_ORIG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INHS_PRODCD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CST_ELMNT_ORIG_GRP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: COST_OVHD_GRP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TMST
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_ETL_ID
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_CRT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l0_upt_
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _pk_md5_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l1_upt_
-    type: timestamp
+  - name: PRC_UNIT_NBR
+    type: integer
     nullable: false
     metadata:
       description: ''
