--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1996,13 +1996,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-09 12:49:52'
-    modifiedAt: '2023-05-15 08:06:57'
+    modifiedAt: '2023-05-15 08:37:42'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101_NC
       - datasets/DS_JDE_01_F41021_NC
       - datasets/DS_JDE_01_F4105
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_VALUT
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3346,7 +3347,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-09 10:41:40'
+    modifiedAt: '2023-05-15 08:37:41'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
