JEKT-1871 - initial commit ❇️ New     - Pipeline        - JDE_MD_SLS_ORDR_HIST_JDE_BW2     - Dataset        - DS_JDE_F42199

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2086,6 +2086,21 @@ pipelines:
       - datasets/MD_MATL
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_SLS_ORDR_HIST_JDE_BW2:
+    name: JDE_MD_SLS_ORDR_HIST_JDE_BW2
+    description: ''
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-15 09:01:57'
+    modifiedAt: '2023-05-15 09:05:23'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_F42199
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -7022,6 +7037,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-05 08:22:07'
         modifiedAt: '2023-05-05 08:22:07'
+  datasets/DS_JDE_F42199:
+    name: DS_JDE_F42199
+    description: ''
+    author: ggrilo1@its.jnj.com
+    createdAt: '2023-05-15 09:05:02'
+    modifiedAt: '2023-05-15 09:05:02'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ggrilo1@its.jnj.com
+        createdAt: '2023-05-15 09:05:02'
+        modifiedAt: '2023-05-15 09:05:02'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
