🔁 Modified     - Pipeline        - MD_MATL_VALUT_JDE     - Dataset        - MD_MATL_VALUT

--- a/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_VALUT/pbt_aspects.yml
@@ -66,8 +66,15 @@ schema:
       mappings: []
       tags: []
   - name: PRC_UNIT_NBR
-    type: integer
-    nullable: false
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOT_VAL_AMT
+    type: decimal(18,4)
+    nullable: true
     metadata:
       description: ''
       mappings: []
