JEKT-1753 🔁 Added target gem     - Pipeline        - SAP_MD_CO_CD_HMD     - Dataset        - MD_CO_CD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1979,11 +1979,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-12 17:10:50'
-    modifiedAt: '2023-05-15 11:38:20'
+    modifiedAt: '2023-05-15 11:40:54'
     datasets:
       inputs:
       - datasets/DS_SAP_HMD_KNB1
-      outputs: []
+      outputs:
+      - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2502,7 +2503,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-15 11:40:54'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
