--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1987,6 +1987,21 @@ pipelines:
       - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_CO_CD_TAI:
+    name: SAP_MD_CO_CD_TAI
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-15 12:33:53'
+    modifiedAt: '2023-05-15 12:43:53'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_HMD_KNB1
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -6748,7 +6763,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-05-12 17:30:46'
-    modifiedAt: '2023-05-15 11:45:12'
+    modifiedAt: '2023-05-15 12:40:22'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
