JEKT-1753 🔁 CtrC CtrV gems from hmd pipeline     - Pipeline        - SAP_MD_CO_CD_TAI

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1995,11 +1995,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-15 12:33:53'
-    modifiedAt: '2023-05-15 12:43:53'
+    modifiedAt: '2023-05-15 12:50:23'
     datasets:
       inputs:
       - datasets/DS_SAP_HMD_KNB1
-      outputs: []
+      outputs:
+      - datasets/MD_CO_CD
     subgraphs: []
     dependencies: {}
 datasets:
